First version of useful packages

--- a/content/intro.tex
+++ b/content/intro.tex
@@ -38,4 +38,8 @@
     \begin{equation*}
         Z = \sqrt{2\left((s+b)\ln\left(1+\frac{s}{b}\right)-s\right)}
     \end{equation*}
+
+    \vspace{0.2cm}
+    Check this out \href{https://github.com/}{Github}
+
 \end{frame}
