Rest of packages

--- a/main.tex
+++ b/main.tex
@@ -4,12 +4,9 @@
 \usepackage{\jobname_style}
 
 % Load only essential packages
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{lmodern}
-\usepackage{amsmath, amssymb}
-\usepackage{graphicx}
-\usepackage{physics}  % for bra-ket notation
+\include{preamble/general}
+\include{preamble/particle-physics}
+\include{preamble/physics}
 
 % Presentation metadata
 \include{presentation-info}
