Reorganize package folder to a 2 digit number ordering

--- a/main.tex
+++ b/main.tex
@@ -4,9 +4,7 @@
 \usepackage{\jobname_style}
 
 % Load only essential packages
-\include{preamble/general}
-\include{preamble/particle-physics}
-\include{preamble/physics}
+\include{00-preamble}
 
 % Presentation metadata
 \include{presentation-info}
